# retropico

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  audio.h  display.cpp  display.h  gbcolors.h  input.h  main.cpp  platform.cpp  platform.h  rom.c  surface.h
src/: audio.h  core.h  display.cpp  display.h  input.cpp  io.h  main.cpp  main.h  platform.h  rom-nes.c  surface.h
src/bootloader/: CMakeLists.txt  bootloader.c  bootloader.h  bootloader_helper.c  bootloader_helper.h  flashloader.c  flashloader.h  main.cpp  main.h  memmap_default.ld  memmap_default_rp2350.ld  memmap_default_rp2350_psram.ld  memmap_defines.ld  memmap_gb.ld  memmap_nes.ld  memmap_sms.ld  memmap_ui.ld
src/common/: CMakeLists.txt  retropico_colors.h  retropico_config.cpp  retropico_config.h  retropico_overlay.cpp  retropico_overlay.h
src/common/widgets/: infobox.cpp  infobox.h  volume.cpp  volume.h
src/compat/: Arduino.h  Print.cpp  Print.h
src/cores/: core.cpp  core.h  main.cpp  main.h
src/cores/Gearsystem/: gearsystem.cmake  gearsystem.cpp  gearsystem.h  rom.c
src/cores/InfoNES/: CMakeLists.txt  infones.cmake  infones.cpp  infones.h  main.cpp  work_meter.cpp
src/cores/Peanut-GB/: CMakeLists.txt  main.cpp  minigb_apu.c  minigb_apu.h  peanut-gb.cmake  peanut-gb.cpp  peanut-gb.h
src/cores/SameBoy/: CMakeLists.txt  c_wrapper.c  c_wrapper.h  dmg_boot.c  sameboy.cpp  sameboy.h
src/cores/gwenesis/: CMakeLists.txt  gwenesis.cpp  gwenesis.h  savestate.c  savestate.h
src/cores/sameboy/: c_wrapper.c  c_wrapper.h  dmg_boot.c  sameboy.cmake  sameboy.cpp  sameboy.h
src/cores/smsplus/: CMakeLists.txt  main.cpp  smsplus.cpp  smsplus.h  wrapper.c
src/cores/smsplus/smsplus/: lut.h  render.c  shared.h  sms.c  system.c  vdp.c  z80.c
src/skeleton/: CMakeLists.txt  audio.h  core.cpp  core.h  display.cpp  display.h  input.h  io.h  platform.h  surface.h
src/skeleton/compat/: Adafruit_I2CDevice.h  Adafruit_SPIDevice.h
src/skeleton/utility/: clock.h  clock_time.cpp  clock_time.h  utility.cpp  utility.h
src/ui/: CMakeLists.txt  core.h  filer.cpp  filer.h  infobox.cpp  infobox.h  main.cpp  main.h  menu.cpp  menu.h  settings.cpp  settings.h  ui.cpp  ui.h
src/ui/bitmaps/: gameboy.h  nes.h  settings.h  sms.h
src/ui/fonts/: future7pt7b.h
src/ui/resources/: gameboy.xcf  gamegear.xcf  nes.xcf  retropico.xcf  settings.xcf  sms.xcf
src/ui/resources/fonts/: future6pt7b.h  future8pt7b.h
src/ui/widgets/: bitmap.cpp  bitmap.h  rectangle.cpp  rectangle.h  text.cpp  text.h  widget.cpp  widget.h
src/utility/: gbcolors.h  sleep.cpp  sleep.h  utility.cpp  utility.h
tools/: pico_run.sh  rp2040.cfg
utility/: clock.cpp  utility.h
